--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <!-- <p>Welcome to your first GitHub Pages website!</p>-->
 <h3> Publications:</h3>
+Exact crossing number parameterized by vertex cover
   
 </body>
 </html>
