--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- 
 <!DOCTYPE html>
 
 <html>
@@ -18,3 +19,88 @@
   
 </body>
 </html>
+-->
+
+<!doctype html>
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html"
+      xmlns="http://www.w3.org/1999/html">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
+    <title>Abhisekh Sankaran</title>
+    <style type="text/css">
+      .card{
+        color: black;
+        background-color: #e4d2cf;
+      }
+      .p1 {
+        font-family: Pangram, Garamond, Georgia, "Times New Roman";
+        font-size: large;
+        }
+      .p2 {
+        font-family: Garamond, Georgia, "Times New Roman";
+        }
+      .p3 {
+        font-family: Garamond, Georgia, "Times New Roman";
+        }
+      .container-fluid {
+        margin: 0 auto;
+        width: 95%;
+      }
+      html {
+        scroll-behavior: smooth;
+      }
+      .row {
+        margin-top: 10px;
+      }
+      .nav {
+        margin-bottom: 150px;
+      }
+      .navbar {
+        margin: 0 auto;
+        width: 50%;
+      }
+      #main{
+        margin: 0 auto;
+        width: 50%;
+      }
+
+    </style>
+  </head>
+    <body>
+    <div id="main">
+              <div class="container-fluid">
+      <div class="row" style="margin-top:100px" id="contact-info">
+         <h1> Abhisekh Sankaran </h1>
+         <h5>Post-doctoral research associate,
+            University of Cambridge, U.K.
+         </h5>
+         <p><b>Email:</b> <i>abhisekh.sankaran [at] cl.cam.ac.uk</i> |
+            <b>Address:</b> FS24, William Gates Building, 15 J. J. Thomson Avenue, Cambridge CB3 0FD. |
+            <b>Office:</b> +44 1223 763 541
+         </p>
+          <hr />
+          <div class="row" id="biography">
+          <h3> About me </h3>
+              <p>
+                  I am a post-doctoral research associate at the Department of Computer Science and Technology at the University of Cambridge, working with <a href="https://www.cl.cam.ac.uk/~ad260/"> Anuj Dawar</a> in the project "Logical Fractals" funded by the <a href=>Leverhulme Trust</a>.
+                  Prior to coming to Cambridge, I was a post-doctoral fellow in the <a href="https://www.imsc.res.in/theoretical_computer_science">Theoretical Computer Science Wing</a> at the <a href="https://www.imsc.res.in/">Institute of Mathematical Sciences, Chennai</a>.
+                  I completed my Ph.D., and also my Bachelors and Masters, from the <a href="https://www.cse.iitb.ac.in">Department of Computer Science and Engineering</a> at <a href="https://www.iitb.ac.in">IIT Bombay</a>. My dissertation, titled "<a href="https://arxiv.org/abs/1609.06297">A generalization of the Łoś-Tarski preservation theorem</a>", was completed under the guidance of <a href=https://www.researchgate.net/profile/Bharat_Adsul>Bharat Adsul</a> and <a href=https://www.cse.iitb.ac.in/~supratik/>Supratik Chakraborty</a>. A summary of my dissertation can be found <a href="https://arxiv.org/abs/1811.01014">here</a>.
+              </p>
+          </div></div>
+        <hr />
+       <div class="row" id="research-interests">
+         <h3> Research Interests</h3>
+         <p>My research is in the areas of mathematical logic, particularly finite model theory, and parameterized algorithms. My work is largely  about adapting notions and results from infinitary (or classical) model theory to the context of finite structures. Two of these of particular interest have been the Łoś-Tarski preservation theorem and the  Löwenheim-Skolem  property. I am also interested in structural graph theory for the various connections it has to logic and algorithms.</p>
+       </div>
+       <hr />
+      </div>
+  </div>
+</body>
+</html>
+  
