--- a/index.html
+++ b/index.html
@@ -96,11 +96,10 @@
          <h3> Selected Publications </h3>
          <ul>
              <li>
-                 <a href="https://arxiv.org/abs/2011.02894/">
-                     MSO undecidability for some hereditary classes of unbounded clique-width
-                 </a>
+                 <b>MSO undecidability for some hereditary classes of unbounded clique-width</b>
                  (with <a href="https://www.cl.cam.ac.uk/~ad260/"> Anuj Dawar</a>)
-                 <a data-bs-toggle="collapse" href="#mso-undec" aria-expanded="false" aria-controls="collapseExample">[abstract]</a> <br>
+                 <a data-bs-toggle="collapse" href="#mso-undec" aria-expanded="false" aria-controls="collapseExample">[abstract]</a>
+                 [<a href="https://arxiv.org/abs/2011.02894/"> arxiv </a>] <br>
                  To appear in the proc. of the 30<sup>th</sup> Computer Science Logic (CSL), Göttingen, Germany, February 2022
                  <div class="collapse" id="mso-undec">
                      <div class="card card-body">
@@ -110,15 +109,15 @@
              </li>
 
 	         <li>
-                 <a href="http://dx.doi.org/10.1016/j.jctb.2021.09.001">
-                     Clique-width of point configurations
-                 </a>
+                 <b>Clique-width of point configurations</b>
                  (with
                  <a href=https://cagirici.net/>Onur Çağırıcı</a>,
                  <a href=https://www.fi.muni.cz/~hlineny/>Petr Hliněný</a>, and
                  <a href=https://www.researchgate.net/scientific-contributions/Filip-Pokryvka-2132774538>
                      Filip Pokrývka</a>)
-                 <a data-bs-toggle="collapse" href="#cwpoints" aria-expanded="false" aria-controls="collapseExample">[abstract]</a> <br>
+                 [<a data-bs-toggle="collapse" href="#cwpoints" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
+                 [<a href="http://dx.doi.org/10.1016/j.jctb.2021.09.001">paper</a>]
+                 <br>
                  To appear in the Journal of Combinatorial Theory, Series B, 2021
                  <div class="collapse" id="cwpoints">
                      <div class="card card-body"> While structural width parameters (of the input) belong to the standard toolbox of graph algorithms, it is not the usual case in computational geometry. As a case study we propose a natural extension of the structural graph parameter of clique-width to geometric point configuration represented by their order type. We study basic properties of this clique-width notion, and show that it is aligned with the general concept of clique-width of relational structures by Blumensath and Courcelle (2006). We also relate the new notion to monadic second-order logic of point configurations. As an application, we provide several linear FPT time algorithms for geometric point problems which are NP-hard in general, in the special case that the input point set is of bounded clique-width and the clique-width expression is also given.
