--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
         <hr />
        <div class="row" id="research-interests">
          <h3> Research Interests</h3>
-         <p>My research is in the areas of mathematical logic, particularly finite model theory, and parameterized algorithms. My work is largely  about adapting notions and results from infinitary (or classical) model theory to the context of finite structures. Two of these of particular interest have been the Łoś-Tarski preservation theorem and the  Löwenheim-Skolem  property. I am also interested in structural graph theory for the various connections it has to logic and algorithms.</p>
+         <p>My research is in the areas of mathematical logic, particularly classical and finite model theory, and parameterized algorithms. My work is largely about adapting notions and results from classical (infinitary) model theory to the context of finite structures. Two of these of particular interest to me have been the Łoś-Tarski preservation theorem and the  Löwenheim-Skolem property. In parameterized algorithms, my interest is primarily in algorithmic metatheorems that provide a uniform means of obtaining fixed parameter tractable algorithms for all problems that can be defined in a given logic. Finally, I am also interested in structural (hyper)graph theory, particularly the notion of clique-width in the graph and geometric settings, in itself and for the various connections it has to logic and algorithms. <!--, in itself and for the various connections it has to logic and algorithms.-->
+             </p>
        </div>
        <hr />
        <div class="div-publications" id="publications">
@@ -98,8 +99,8 @@
              <li>
                  <b>MSO undecidability for some hereditary classes of unbounded clique-width</b>
                  (with <a href="https://www.cl.cam.ac.uk/~ad260/"> Anuj Dawar</a>)
-                 <a data-bs-toggle="collapse" href="#mso-undec" aria-expanded="false" aria-controls="collapseExample">[abstract]</a>
-                 [<a href="https://arxiv.org/abs/2011.02894/"> arxiv </a>] <br>
+                 [<a data-bs-toggle="collapse" href="#mso-undec" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
+                 [<a href="https://arxiv.org/abs/2011.02894/">arxiv</a>] <br>
                  To appear in the proc. of the 30<sup>th</sup> Computer Science Logic (CSL), Göttingen, Germany, February 2022
                  <div class="collapse" id="mso-undec">
                      <div class="card card-body">
