--- a/index.html
+++ b/index.html
@@ -127,10 +127,12 @@
              </li>
 
              <li>
-                 <a href="https://www.isichennai.res.in/~sujata/icla2021/proceedings.pdf">
+                 <b>
                      Feferman-Vaught decompositions for prefix classes of first order logic
-                 </a>
-                 &nbsp<a data-bs-toggle="collapse" href="#feferman-vaught" aria-expanded="false" aria-controls="collapseExample">[abstract]</a>
+                 </b>
+                 &nbsp
+                 [<a data-bs-toggle="collapse" href="#feferman-vaught" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
+                 [<a href="https://www.isichennai.res.in/~sujata/icla2021/proceedings.pdf">paper</a>]
                  [<a href="Papers/fv-prefix.pdf">pdf</a>]
                  [<a href="Talks/fv-prefix-talk.pdf">slides</a>]
                  <br>
