--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                  [<a href="Papers/fv-prefix.pdf">pdf</a>]
                  [<a href="Talks/fv-prefix-talk.pdf">slides</a>]
                  <br>
-                 Proc. of the 9<sup>th</sup> Indian Conference on Logic and Applications (ICLA), Chennai, India, March 2021,  pp. 111-116
+                 <p style="margin-bottom:3cm;">Proc. of the 9<sup>th</sup> Indian Conference on Logic and Applications (ICLA), Chennai, India, March 2021,  pp. 111-116</p>
                  <div class="collapse" id="feferman-vaught">
                      <div class="card card-body">
                      The Feferman-Vaught theorem provides a way of evaluating a first order sentence φ on a disjoint union of structures by producing a decomposition of φ into sentences which can be evaluated on the individual structures and the results of these evaluations combined using a propositional formula. This decomposition can in general be non-elementarily larger than φ. We show that for FO sentences in prenex normal form with a fixed number of quantifier alternations, such a decomposition can be obtained in time elementary in the size of φ.
