--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                  [<a data-bs-toggle="collapse" href="#cwpoints" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
                  [<a href="http://dx.doi.org/10.1016/j.jctb.2021.09.001">paper</a>]
                  <br>
-                 To appear in the Journal of Combinatorial Theory, Series B, 2021
+                 <p style="margin-bottom:0.5cm;">To appear in the Journal of Combinatorial Theory, Series B, 2021</p>
                  <div class="collapse" id="cwpoints">
                      <div class="card card-body"> While structural width parameters (of the input) belong to the standard toolbox of graph algorithms, it is not the usual case in computational geometry. As a case study we propose a natural extension of the structural graph parameter of clique-width to geometric point configuration represented by their order type. We study basic properties of this clique-width notion, and show that it is aligned with the general concept of clique-width of relational structures by Blumensath and Courcelle (2006). We also relate the new notion to monadic second-order logic of point configurations. As an application, we provide several linear FPT time algorithms for geometric point problems which are NP-hard in general, in the special case that the input point set is of bounded clique-width and the clique-width expression is also given.
                      </div>
@@ -136,7 +136,7 @@
                  [<a href="Papers/fv-prefix.pdf">pdf</a>]
                  [<a href="Talks/fv-prefix-talk.pdf">slides</a>]
                  <br>
-                 <p style="margin-bottom:3cm;">Proc. of the 9<sup>th</sup> Indian Conference on Logic and Applications (ICLA), Chennai, India, March 2021,  pp. 111-116</p>
+                 <p style="margin-bottom:0.5cm;">Proc. of the 9<sup>th</sup> Indian Conference on Logic and Applications (ICLA), Chennai, India, March 2021,  pp. 111-116</p>
                  <div class="collapse" id="feferman-vaught">
                      <div class="card card-body">
                      The Feferman-Vaught theorem provides a way of evaluating a first order sentence φ on a disjoint union of structures by producing a decomposition of φ into sentences which can be evaluated on the individual structures and the results of these evaluations combined using a propositional formula. This decomposition can in general be non-elementarily larger than φ. We show that for FO sentences in prenex normal form with a fixed number of quantifier alternations, such a decomposition can be obtained in time elementary in the size of φ.
