--- a/index.html
+++ b/index.html
@@ -70,12 +70,11 @@
         <div class="container-fluid">
       <div class="row" style="margin-top:100px" id="contact-info">
          <h1> Abhisekh Sankaran </h1>
-         <h5>Post-doctoral research associate,
+         <h5>Post-doctoral Research Associate,
             University of Cambridge, U.K.
          </h5>
-         <p><b>Email:</b> <i>abhisekh.sankaran [at] cl.cam.ac.uk</i> |
-            <b>Address:</b> FS24, William Gates Building, 15 J. J. Thomson Avenue, Cambridge CB3 0FD. |
-            <b>Office:</b> +44 1223 763 541
+         <p><b>Email:</b> <i>firstname.lastname [at] cl.cam.ac.uk</i> | <b>Office:</b> +44 1223 763 541 <br>
+            <b>Address:</b> FS24, William Gates Building, 15 J. J. Thomson Avenue, Cambridge CB3 0FD.
          </p>
           <hr />
           <div class="row" id="biography">
@@ -166,10 +165,12 @@
 
 
              <li>
-                 <a href="https://arxiv.org/abs/2010.05799">
+
+                 <b>
                      Some classical model theoretic aspects of bounded shrub-depth classes
-                 </a>
+                 </b>
                  &nbsp[<a data-bs-toggle="collapse" href="#some-classical" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
+                 [<a href="https://arxiv.org/abs/2010.05799">]paper</a>
                  [<a href="Papers/shrub-depth-model-theory.pdf">pdf</a>] <br>
                  <p style="margin-bottom:0.2cm;">Arxiv preprint, Oct. 2020</p>
                  <div class="collapse" id="some-classical">
@@ -180,15 +181,16 @@
              </li>
 
              <li>
-                 <a href="https://link.springer.com/chapter/10.1007%2F978-3-030-60440-0_5">
+                 <b>
                      Clique-width of point configurations
-                 </a>
+                 </b>
                  (with
                  <a href=https://cagirici.net/>Onur Çağırıcı</a>,
                  <a href=https://www.fi.muni.cz/~hlineny/>Petr Hliněný</a>, and
                  <a href=https://www.researchgate.net/scientific-contributions/Filip-Pokryvka-2132774538>
                      Filip Pokrývka</a>)
                  &nbsp[<a data-bs-toggle="collapse" href="#cwpoints" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
+                 [<a href="https://link.springer.com/chapter/10.1007%2F978-3-030-60440-0_5">paper</a>]
                  [<a href="Papers/cwpoints-wg.pdf">pdf</a>] <br>
                  <p style="margin-bottom:0.2cm;">Proc. of the 46<sup>th</sup> International Workshop on Graph Theoretic Concepts in Computer Science, Leeds, UK,  June 2020, pp. 54-66, Springer</p>
                  <div class="collapse" id="cwpointswg">
@@ -198,11 +200,12 @@
              </li>
 
              <li>
-                 <a href="https://link.springer.com/chapter/10.1007%2F978-3-030-35802-0_24">
+                 <b>
                      Exact crossing number parameterized by vertex cover
-                 </a>
+                 </b>
                  (with <a href=https://www.fi.muni.cz/~hlineny/>Petr Hliněný</a>)
                  &nbsp[<a data-bs-toggle="collapse" href="#exact-crossing" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
+                 [<a href="https://link.springer.com/chapter/10.1007%2F978-3-030-35802-0_24">paper</a>]
                  [<a href="Papers/cross-vc.pdf">pdf</a>]
                  [<a href="Talks/cross-vc-talk.pdf">slides</a>]
                  <br>
@@ -215,11 +218,12 @@
              </li>
 
              <li>
-                 <a href="https://link.springer.com/chapter/10.1007/978-3-662-58771-3_8">
+                 <b>
                      Revisiting the generalized Łoś-Tarski theorem
-                 </a>
+                 </b>
                  &nbsp
                  [<a data-bs-toggle="collapse" href="#revisiting-glt" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
+                 [<a href="https://link.springer.com/chapter/10.1007/978-3-662-58771-3_8">paper</a>]
                  [<a href="Papers/revisiting-glt.pdf">pdf</a>]
                  [<a href="Talks/revisiting-glt-talk.pdf">slides</a>]
                 <a data-bs-toggle="collapse" href="#revisiting-glt-talk" aria-expanded="false" aria-controls = "collapseExample"> [talk venues] </a>
