--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                  [<a href="https://link.springer.com/chapter/10.1007/978-3-662-58771-3_8">paper</a>]
                  [<a href="Papers/revisiting-glt.pdf">pdf</a>]
                  [<a href="Talks/revisiting-glt-talk.pdf">slides</a>]
-                <a data-bs-toggle="collapse" href="#revisiting-glt-talk" aria-expanded="false" aria-controls = "collapseExample"> [talk venues] </a>
+                 [<a data-bs-toggle="collapse" href="#revisiting-glt-talk" aria-expanded="false" aria-controls = "collapseExample">Talk venues</a>]
                  <br>
                  <p style="margin-bottom:0.2cm;">Proc. of the 8<sup>th</sup> Indian Conference on Logic and its Applications (ICLA), Delhi, India, March 2019, pp. 76-88, Springer</p>
                <div class="collapse" id="revisiting-glt">
@@ -246,13 +246,14 @@
              </li>
 
              <li>
-                 <a href="https://drops.dagstuhl.de/opus/volltexte/2017/7707/">
+                 <b>
                      A finitary analogue of the downward Löwenheim-Skolem property
-                 </a>
+                 </b>
                  &nbsp<a data-bs-toggle="collapse" href="#fin-dls" aria-expanded="false" aria-controls="collapseExample">[abstract]</a>
+                 [<a href="https://drops.dagstuhl.de/opus/volltexte/2017/7707/">paper</a>]
                  [<a href="Papers/fin-dls.pdf">pdf</a>]
                  [<a href="Talks/fin-dls-talk.pdf">slides</a>]
-                <a data-bs-toggle="collapse" href="#fin-dls-talk" aria-expanded="false" aria-controls = "collapseExample"> [Talk venues] </a>
+                 [<a data-bs-toggle="collapse" href="#fin-dls-talk" aria-expanded="false" aria-controls = "collapseExample">Talk venues</a>]
                 <br>
                  <p style="margin-bottom:0.2cm;">Proc. of the 26<sup>th</sup> Computer Science Logic (CSL), Stockholm, Sweden, August 2017, pp. 37:1-37:21, Schloss Dagstuhl - LZI</p>
                  <div class="collapse" id="fin-dls">
@@ -295,8 +296,16 @@ Logic (CSL) 2017, Stockholm, Sweden
              </li>
 
 
-             <li><a href="https://www.sciencedirect.com/science/article/pii/S0168007215001104?via%3Dihub"> A generalization of the Łoś-Tarski
-               preservation theorem</a> (with <a href=https://www.researchgate.net/profile/Bharat_Adsul>Bharat Adsul</a> and <a href=https://www.cse.iitb.ac.in/~supratik/>Supratik Chakraborty</a>) <a data-bs-toggle="collapse" href="#a-generalization" aria-expanded="false" aria-controls="collapseExample">[abstract]</a> [<a href="Papers/gen-lt.pdf">pdf</a>]<br>
+             <li>
+                 <b>
+                     A generalization of the Łoś-Tarski preservation theorem
+                 </b>
+                 (with
+                 <a href=https://www.researchgate.net/profile/Bharat_Adsul>Bharat Adsul</a> and
+                 <a href=https://www.cse.iitb.ac.in/~supratik/>Supratik Chakraborty</a>)
+                 [<a data-bs-toggle="collapse" href="#a-generalization" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
+                 [<a href="https://www.sciencedirect.com/science/article/pii/S0168007215001104?via%3Dihub">paper</a>]
+                 [<a href="Papers/gen-lt.pdf">pdf</a>]<br>
                <p style="margin-bottom:0.2cm;">Annals of Pure and Applied Logic, Vol. 167(3), 189-210, 2016</p>
                <div class="collapse" id="a-generalization">
                   <div class="card card-body">
@@ -304,15 +313,19 @@ Logic (CSL) 2017, Stockholm, Sweden
                   </div>
                </div>
             </li>
-            <li><a href="https://link.springer.com/chapter/10.1007%2F978-3-662-44522-8_40">A generalization of the Łoś-Tarski preservation theorem over
-               classes of finite structures</a>
+
+            <li>
+                <b>
+                    A generalization of the Łoś-Tarski preservation theorem over classes of finite structures
+                </b>
                 (with
                 <a href=https://www.researchgate.net/profile/Bharat_Adsul>Bharat Adsul</a> and
                 <a href=https://www.cse.iitb.ac.in/~supratik/>Supratik Chakraborty</a>)
                 <a data-bs-toggle="collapse" href="#mfcs14" aria-expanded="false" aria-controls="collapseExample">[abstract]</a>
+                [<a href="https://link.springer.com/chapter/10.1007%2F978-3-662-44522-8_40">paper</a>]
                 [<a href="Papers/gen-lt-fin.pdf">pdf</a>]
                 [<a href="Talks/gen-lt-fin-talk.pdf">slides</a>]
-                <a data-bs-toggle="collapse" href="#mfcs14-talk" aria-expanded="false" aria-controls = "collapseExample"> [Talk venues] </a>
+                [<a data-bs-toggle="collapse" href="#mfcs14-talk" aria-expanded="false" aria-controls = "collapseExample">Talk venues</a>]
                 <br>
                <p style="margin-bottom:0.2cm;">Proc. of the 39<sup>th</sup> Mathematical
                Foundations of Computer Science (MFCS), Budapest, Hungary, August 2014, pp. 474-485, Springer</p>
@@ -338,17 +351,21 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
                     </ul>
                 </div>
             </li>
-            <li><a href="https://link.springer.com/chapter/10.1007%2F978-3-642-32621-9_22"> Preservation under
-               substructures modulo bounded cores</a>
+
+            <li>
+                <b>
+                    Preservation under substructures modulo bounded cores
+                </b>
                 (with
                 <a href=https://www.researchgate.net/profile/Bharat_Adsul>Bharat Adsul</a>,
                 <a href=https://www.researchgate.net/profile/Vivek_Madan> Vivek Madan</a>,
                 <a href=https://pritishkamath.github.io/> Pritish Kamath </a> and
                 <a hred=https://www.cse.iitb.ac.in/~supratik/>Supratik Chakraborty</a>)
-                <a data-bs-toggle="collapse" href="#preservation-under" aria-expanded="false" aria-controls="collapseExample">[abstract]</a>
+                [<a data-bs-toggle="collapse" href="#preservation-under" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
+                [<a href="https://link.springer.com/chapter/10.1007%2F978-3-642-32621-9_22">paper</a>]
                 [<a href="Papers/pres-sub-bdd-cores.pdf">pdf</a>]
                 [<a href="Papers/pres-sub-bdd-cores.pdf">slides</a>]
-                <a data-bs-toggle="collapse" href="#preservation-under-talks" aria-expanded="false" aria-controls="collapseExample">[Talk venues]</a>
+                [<a data-bs-toggle="collapse" href="#preservation-under-talks" aria-expanded="false" aria-controls="collapseExample">Talk venues</a>]
                 <br>
                 <p style="margin-bottom:0.2cm;">Proc. of the 19<sup>th</sup> Workshop on Logic, Language, Information and Computation (WoLLIC), Buenos Aires, Argentina, September 2012, Vol. 7456, pp. 291-305, Springer</p>
                 <div class="collapse" id="preservation-under">
