Added talks and others folders

--- a/index.html
+++ b/index.html
@@ -402,6 +402,49 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
            </ul>
        </div>
        <hr />
+
+            <div class="other-articles" id="other-articles">
+                <h3>Other refereed articles/abstracts</h3>
+                <p>
+                <ul>
+                <li>
+                    <b>
+                      Clique-width of point configurations
+                    </b>
+                 (with
+                 <a href=https://cagirici.net/>Onur Çağırıcı</a>,
+                 <a href=https://www.fi.muni.cz/~hlineny/>Petr Hliněný</a>, and
+                 <a href=https://www.researchgate.net/scientific-contributions/Filip-Pokryvka-2132774538>
+                     Filip Pokrývka</a>)
+                 [<a href="Papers/fpt-newsletter-dec-21.pdf">newsletter</a>]
+                 <br>
+                 <p style="margin-bottom:0.2cm;"><b>Invited article</b> in the Parameterized Complexity News (Newsletter of the Parameterized Complexity community), Vol 17, No. 3, December 2021</p>
+                </li>
+
+                <li>
+                <b>  A generalization of the Łoś-Tarski preservation theorem</b>
+                 [<a href="Papers/alc-lt.pdf">paper</a>]
+                 [<a href="Papers/alc-lt-talk.pdf">slides</a>]<br>
+                 Presented at the 14<sup>th</sup> Asian Logic Conference, IIT Bombay, India, January 2015
+                </li>
+
+                <li>
+                <b> A generalization of the Łoś-Tarski preservation theorem  via characterizations of Σ<sup>0</sup><sub>n</sub> and Π<sup>0</sup><sub>n</sub> theories</b>
+                 &nbsp[<a data-bs-toggle="collapse" href="#rms" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
+                 [<a href="Papers/rms-lt.pdf">paper</a>]
+                 [<a href="Talks/rms-lt-talk.pdf">slides</a>]<br>
+                 Presented at the 29<sup>th</sup> Annual Conference of the Ramanujan Mathematical Society, IISER Pune, India, June 2014
+                 <div class="collapse" id="rms">
+                     <div class="card card-body">
+                         We present a family of preservation theorems that provide semantic characterization of Σ^0_n and Π^0_n theories, for each n >= 1, and hence generalize the classical Łoś-Tarski preservation theorem. Vis-`a-vis the characterizations of the aforesaid theories provided by H. J. Keisler in 1960 using sandwiches of finite orders, our semantic properties as well as our proofs are much simpler, and more naturally generalize the Łoś-Tarski theorem. We also explicitly relate the model-theoretic operations involved in our results, with those of Keisler.
+                    </div>
+                 </div>
+            </li>
+
+            </ul>
+                </div>
+            </div>
+
        <div class="div-teaching" id="teaching">
          <h3> Teaching </h3>
          <p>
@@ -418,7 +461,7 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
            </p>
         </div>
         <div class="div-notes" id="other">
-         <h3> Other talks and notes </h3>
+         <h3> Some talks and notes </h3>
             <p>
             <ul>
             <li>
@@ -502,26 +545,6 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
             </li>
 
             <li>
-                <b>A generalization of the Łoś-Tarski preservation theorem</b>
-                 [<a href="Papers/alc-lt.pdf">pdf</a>]
-                 [<a href="Papers/alc-lt-talk.pdf">slides</a>]<br>
-                 Presented at the 14<sup>th</sup> Asian Logic Conference, IIT Bombay, India, January 2015
-            </li>
-
-            <li>
-                <b>A generalization of the Łoś-Tarski preservation theorem  via characterizations of Σ<sup>0</sup><sub>n</sub> and Π<sup>0</sup><sub>n</sub> theories</b>
-                 &nbsp<a data-bs-toggle="collapse" href="#rms" aria-expanded="false" aria-controls="collapseExample">[abstract]</a>
-                 [<a href="Papers/rms-lt.pdf">pdf</a>]
-                 [<a href="Talks/rms-lt-talk.pdf">slides</a>]<br>
-                 Presented at the 29<sup>th</sup> Annual Conference of the Ramanujan Mathematical Society, IISER Pune, India, June 2014
-                 <div class="collapse" id="rms">
-                     <div class="card card-body">
-                         We present a family of preservation theorems that provide semantic characterization of Σ^0_n and Π^0_n theories, for each n >= 1, and hence generalize the classical Łoś-Tarski preservation theorem. Vis-`a-vis the characterizations of the aforesaid theories provided by H. J. Keisler in 1960 using sandwiches of finite orders, our semantic properties as well as our proofs are much simpler, and more naturally generalize the Łoś-Tarski theorem. We also explicitly relate the model-theoretic operations involved in our results, with those of Keisler.
-                    </div>
-                 </div>
-            </li>
-
-            <li>
                 <b>Using preservation theorems for inexpressibility results in first order logic</b>
                 (with
                 <a href="https://www.cse.iitb.ac.in/~adsul/">Bharat Adsul</a>,
@@ -539,6 +562,17 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
                  </div>
             </li>
 
+            <li>
+                <b> Reminiscences from the ACM A. M. Turing Centenary Celebrations at San Francisco, USA, June 2012</b>
+                [<a href="Other/sf-experience.pdf">article</a>]
+                [<a href="Other/acmpress.pdf">ACM Press Release</a>]
+                [<a href="Other/rabin.pdf">On Michael Rabin</a>]
+            </li>
+
+            <li>
+                <b>Interview for the newsletter of the Department of CSE, IIT Bombay</b>
+                [<a href="Other/interview.pdf">newsletter</a>
+            </li>
 
             </ul>
             </p>
