--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
                 <b>  A generalization of the Łoś-Tarski preservation theorem</b>
                  [<a href="Papers/alc-lt.pdf">paper</a>]
                  [<a href="Papers/alc-lt-talk.pdf">slides</a>]<br>
-                 Presented at the 14<sup>th</sup> Asian Logic Conference, IIT Bombay, India, January 2015
+                 <p style="margin-bottom:0.2cm;">Presented at the 14<sup>th</sup> Asian Logic Conference, IIT Bombay, India, January 2015</p>
                 </li>
 
                 <li>
@@ -433,7 +433,7 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
                  &nbsp[<a data-bs-toggle="collapse" href="#rms" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
                  [<a href="Papers/rms-lt.pdf">paper</a>]
                  [<a href="Talks/rms-lt-talk.pdf">slides</a>]<br>
-                 Presented at the 29<sup>th</sup> Annual Conference of the Ramanujan Mathematical Society, IISER Pune, India, June 2014
+                 <p style="margin-bottom:0.2cm;">Presented at the 29<sup>th</sup> Annual Conference of the Ramanujan Mathematical Society, IISER Pune, India, June 2014</p>
                  <div class="collapse" id="rms">
                      <div class="card card-body">
                          We present a family of preservation theorems that provide semantic characterization of Σ^0_n and Π^0_n theories, for each n >= 1, and hence generalize the classical Łoś-Tarski preservation theorem. Vis-`a-vis the characterizations of the aforesaid theories provided by H. J. Keisler in 1960 using sandwiches of finite orders, our semantic properties as well as our proofs are much simpler, and more naturally generalize the Łoś-Tarski theorem. We also explicitly relate the model-theoretic operations involved in our results, with those of Keisler.
@@ -444,22 +444,24 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
             </ul>
                 </div>
             </div>
+        <hr />
 
        <div class="div-teaching" id="teaching">
          <h3> Teaching </h3>
          <p>
            <ul>
-             <li> Supervisor of the Bachelors thesis titled "Algorithmic study of equivalence relations over finite graphs based on logics of bounded rank" submitted to the Department of Computer Science and Technology, University of Cambridge
+             <li><p style="margin-bottom:0.2cm;"> Supervisor of the Bachelors thesis titled "Algorithmic study of equivalence relations over finite graphs based on logics of bounded rank" submitted to the Department of Computer Science and Technology, University of Cambridge</p>
              </li>
-           <li> Supervisor for Part IB <a href="https://www.cl.cam.ac.uk/teaching/2021/Complexity/">Complexity Theory</a> (second year Bachelors course) in '19, '20 and '21, and Part III <a href="https://www.cl.cam.ac.uk/teaching/1920/L15/">Topics in Logic and Complexity</a> (Masters course) in '20
+           <li> <p style="margin-bottom:0.2cm;"> Supervisor for Part IB <a href="https://www.cl.cam.ac.uk/teaching/2021/Complexity/">Complexity Theory</a> (second year Bachelors course) in '19, '20 and '21, and Part III <a href="https://www.cl.cam.ac.uk/teaching/1920/L15/">Topics in Logic and Complexity</a> (Masters course) in '20</p>
              </li>
-           <li> Lecturer at the <a href="https://www.imsc.res.in/summer_programme_tcs_2018">Theoretical Computer Science Summer Student Programme 2018</a> conducted by IMSc, Chennai for visiting Undergraduate and Masters students across India. This is a part of the larger <a href="https://www.imsc.res.in/summer_research_programme">Summer Research programme</a> conducted by IMSc.
+           <li> <p style="margin-bottom:0.2cm;">Lecturer at the <a href="https://www.imsc.res.in/summer_programme_tcs_2018">Theoretical Computer Science Summer Student Programme 2018</a> conducted by IMSc, Chennai for visiting Undergraduate and Masters students across India. This is a part of the larger <a href="https://www.imsc.res.in/summer_research_programme">Summer Research programme</a> conducted by IMSc.</p>
              </li>
-           <li> Teaching assistant for various Bachelors and Masters courses at the Department of Computer Science and Engineering, IIT Bombay.
+           <li> <p style="margin-bottom:0.2cm;">Teaching assistant for various Bachelors and Masters courses at the Department of Computer Science and Engineering, IIT Bombay.</p>
            </li>
          </ul>
            </p>
         </div>
+        <hr />
         <div class="div-notes" id="other">
          <h3> Some talks and notes </h3>
             <p>
@@ -470,7 +472,7 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
                 <a href="Talks/ext-pres-yr-owls.pdf">[slides]</a>
                 <a href="https://www.youtube.com/watch?v=BNrQMbOq03g">[video]</a>
                 <br />
-                Talk at the <a href="https://www.cl.cam.ac.uk/events/owls/">Young Researchers - Online Worldwide Logic Seminar (YR-OWLS)</a>, November, 2020
+                <p style="margin-bottom:0.2cm;">Talk at the <a href="https://www.cl.cam.ac.uk/events/owls/">Young Researchers - Online Worldwide Logic Seminar (YR-OWLS)</a>, November, 2020</p>
                 <div class="collapse" id="yr-owls">
                     <div class="card card-body">
                         It is well known that the classic Łoś-Tarski preservation theorem fails in the finite: there are first-order definable classes of finite structures closed under extensions which are not definable (in the finite) in the existential fragment of first-order logic. We strengthen this by constructing for every n, first-order definable classes of finite structures closed under extensions which are not definable with n quantifier alternations. The classes we construct are definable in the extension of Datalog with negation and indeed in the existential fragment of transitive-closure logic. This answers negatively an open question posed by Rosen and Weinstein.
@@ -483,7 +485,7 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
                 &nbsp[<a data-bs-toggle="collapse" href="#heredit-fin" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
                 [<a href="Talks/heredit-fin-talk.pdf">slides</a>]
                 [<a data-bs-toggle="collapse" href="#heredit-fin-talk" aria-expanded="false" aria-controls="collapseExample">talk venues</a>]<br>
-                This is an alternate (and chronologically first) proof of the central result of <a href="https://drops.dagstuhl.de/opus/volltexte/2021/13452/">this paper</a>. University of Cambridge, February 2019. <br />
+                <p style="margin-bottom:0.2cm;">This is an alternate (and chronologically first) proof of the central result of <a href="https://drops.dagstuhl.de/opus/volltexte/2021/13452/">this paper</a>. University of Cambridge, February 2019.</p> <br />
 
                 <div class="collapse" id="heredit-fin">
                     <div class="card card-body">
@@ -524,7 +526,7 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
                 <b>Algorithmic metatheorems - a survey</b>
                 [<a data-bs-toggle="collapse" href="#algo-meta" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
                 [<a href="Talks/heredit-fin-talk.pdf">slides</a>]<br />
-                Presented at the <a href="https://fmindia.cmi.ac.in/update2018/">Formal Methods Update (FMU) Meeting</a>, BITS Goa, India, July, 2018
+                <p style="margin-bottom:0.2cm;">Presented at the <a href="https://fmindia.cmi.ac.in/update2018/">Formal Methods Update (FMU) Meeting</a>, BITS Goa, India, July, 2018</p>
                 <div class="collapse" id="algo-meta">
                     <div class="card card-body">
                         We present a (partial) survey of the area of algorithmic metatheorems. These theorems provide fixed parameter tractable (FPT) algorithms for the model checking problem, namely the problem of checking if an input structure from a given class of structures satisfies a property that is expressible in a given logic, like say first order logic (FO) or monadic second order logic (MSO). The parameters in these algorithms are the size of the logical description of the property, along with (the numerical description of) some structural aspect of the input structure. We look at various well-studied classes of posets and graphs that admit such FPT algorithms and give the intuitive ideas behind the techniques involved.
@@ -536,7 +538,7 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
                 <b>Kernels using composition</b>
                 [<a data-bs-toggle="collapse" href="#kernels-comp" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
                 [<a href="Talks/kernels-comp-talk.pdf">slides</a>]<br />
-                Presented at the <a href="https://www.imsc.res.in/~vraman/pcweek.pdf">Parameterized Complexity Week</a>, IMSc Chennai, India, October, 2017
+                <p style="margin-bottom:0.2cm;">Presented at the <a href="https://www.imsc.res.in/~vraman/pcweek.pdf">Parameterized Complexity Week</a>, IMSc Chennai, India, October, 2017</p>
                 <div class="collapse" id="kernels-comp">
                     <div class="card card-body">
                         We present a model-theoretic approach for the problem of FO/MSO model checking over a given class of graphs. Specifically, we consider classes that are represented using trees in which the leaf nodes are labeled with simple structures (typically, point graphs) and the internal nodes are labeled with operations on structures. We show that if the operations satisfy the Feferman-Vaught composition property, then the model checking problem admits kernelization and linear time f.p.t. algorithms.  This result provides a unified approach for handling a variety of sparse and dense graph classes: graphs of bounded tree-width, bounded tree-depth, bounded shrub-depth,bounded clique-width/rank-width and m-partite cographs, and graphs obtained from these using various well-studied operations such as complementation, line-graph, disjoint union, series-parallel connects and the Cartesian and tensor products.
@@ -554,7 +556,7 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
                 &nbsp<a data-bs-toggle="collapse" href="#pres-inexp" aria-expanded="false" aria-controls="collapseExample">[abstract]</a>
                  [<a href="Papers/Inexpressibility.pdf">pdf</a>]
                  <br>
-                 A small set of results that came about when the efforts at proving GLT(k) were still on. IIT Bombay, India, August 2012
+                 <p style="margin-bottom:0.2cm;">A small set of results that came about when the efforts at proving GLT(k) were still on. IIT Bombay, India, August 2012</p>
                  <div class="collapse" id="pres-inexp">
                      <div class="card card-body">
                         We investigate the applications of preservation theorems in showing inexpressibility results in FO.
@@ -563,15 +565,15 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
             </li>
 
             <li>
-                <b> Reminiscences from the ACM A. M. Turing Centenary Celebrations at San Francisco, USA, June 2012</b>
+                <p style="margin-bottom:0.2cm;"> <b> Reminiscences from the ACM A. M. Turing Centenary Celebrations at San Francisco, USA, June 2012 </b>
                 [<a href="Other/sf-experience.pdf">article</a>]
                 [<a href="Other/acmpress.pdf">ACM Press Release</a>]
-                [<a href="Other/rabin.pdf">On Michael Rabin</a>]
+                [<a href="Other/rabin.pdf">On Michael Rabin</a>]</p>
             </li>
 
             <li>
-                <b>Interview for the newsletter of the Department of CSE, IIT Bombay</b>
-                [<a href="Other/interview.pdf">newsletter</a>
+                <p style="margin-bottom:0.2cm;">
+                    <b>Interview for the newsletter of the Department of CSE, IIT Bombay</b>[<a href="Other/interview.pdf">newsletter</a></p>
             </li>
 
             </ul>
@@ -581,7 +583,7 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
  <hr />
     <br />
     <br />
-
+    Copyright 2021
     <br />
     <br />
     <!-- Optional JavaScript; choose one of the two! -->
