--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link" href="#research-interests">Research Interests</a>
             <a class="nav-item nav-link" href="#publications">Publications</a>
+            <a class="nav-item nav-link" href="#other-articles">Other articles</a>
             <a class="nav-item nav-link" href="#teaching">Teaching</a>
-            <a class="nav-item nav-link" href="#other">Other talks and notes</a>
+            <a class="nav-item nav-link" href="#some-talks-notes">Some talks and notes</a>
           </div>
         </div>
       </div>
@@ -462,7 +463,7 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
            </p>
         </div>
         <hr />
-        <div class="div-notes" id="other">
+        <div class="div-notes" id="some-talks-notes">
          <h3> Some talks and notes </h3>
             <p>
             <ul>
