--- a/index.html
+++ b/index.html
@@ -573,7 +573,8 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
 
             <li>
                 <p style="margin-bottom:0.2cm;">
-                    <b>Interview for the newsletter of the Department of CSE, IIT Bombay</b>[<a href="Other/interview.pdf">newsletter</a></p>
+                    <b>Interview for the newsletter of the Department of CSE, IIT Bombay</b>
+                    &nbsp[<a href="Other/interview.pdf">newsletter</a></p>]
             </li>
 
             </ul>
