Added FPT newsletter to Papers

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                  [<a href="https://link.springer.com/chapter/10.1007/978-3-662-58771-3_8">paper</a>]
                  [<a href="Papers/revisiting-glt.pdf">pdf</a>]
                  [<a href="Talks/revisiting-glt-talk.pdf">slides</a>]
-                 [<a data-bs-toggle="collapse" href="#revisiting-glt-talk" aria-expanded="false" aria-controls = "collapseExample">Talk venues</a>]
+                 <!-- [<a data-bs-toggle="collapse" href="#revisiting-glt-talk" aria-expanded="false" aria-controls = "collapseExample">Talk venues</a>] -->
                  <br>
                  <p style="margin-bottom:0.2cm;">Proc. of the 8<sup>th</sup> Indian Conference on Logic and its Applications (ICLA), Delhi, India, March 2019, pp. 76-88, Springer</p>
                <div class="collapse" id="revisiting-glt">
@@ -235,7 +235,7 @@
                      We present a new proof of the generalized Łoś-Tarski theorem (GLT(k)) from [6], over arbitrary structures. Instead of using λ-saturation as in [6], we construct just the "required saturation" directly using ascending chains of structures. We also strengthen the failure of GLT(k) in the finite shown in [7], by strengthening the failure of the Łoś-Tarski theorem in this context. In particular, we prove that not just universal sentences, but for each fixed k, even Σ^0_2 sentences containing k existential quantifiers fail to capture hereditariness in the finite. We conclude with two problems as future directions, concerning the Łoś-Tarski theorem and GLT(k), both in the context of all finite structures.
                   </div>
                </div>
-                 <div class="collapse" id="revisiting-glt-talk">
+                <!-- <div class="collapse" id="revisiting-glt-talk">
                      <div class="card card-body">
                          <ul>
                              <li>
@@ -244,6 +244,7 @@
                          </ul>
                      </div>
                  </div>
+                 -->
              </li>
 
              <li>
@@ -266,7 +267,7 @@
                      <div class="card card-body">
                          <ul>
                              <li>
-                                Oct '17: (Invited talk) The annual meet of the Calcutta Logic Circle, Kolkata, India
+                                Oct '17: (<b>Invited talk</b>) The annual meet of the Calcutta Logic Circle, Kolkata, India
                              </li>
                              <li>
                                  Sep '17: Department of Informatics, Rheinisch-Westfälische Technische Hochschule (RWTH), Aachen, Germany
@@ -279,7 +280,7 @@
 Logic (CSL) 2017, Stockholm, Sweden
                              </li>
                              <li>
-                                 Dec '16: (Invited talk) International Conference of the Indian Mathematics Consortium (TIMC) in co-operation with the American Mathematical Society (AMS), Varanasi, India
+                                 Dec '16: (<b>Invited talk</b>) International Conference of the Indian Mathematics Consortium (TIMC) in co-operation with the American Mathematical Society (AMS), Varanasi, India
                              </li>
                              <li>
                                  Nov '16: Department of Mathematics, University of California at Berkeley, USA
@@ -378,7 +379,10 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
                   <div class="card card-body">
                      <ul>
                          <li>
-                             Oct '12: Model Theory Seminar and Computational Logic Seminar, Graduate Center, City University of New York (CUNY), USA
+                             Oct '12: Model Theory Seminar, Graduate Center, City University of New York (CUNY), USA
+                         </li>
+                         <li>
+                             Oct '12: Computational Logic Seminar, Graduate Center, City University of New York (CUNY), USA
                          </li>
                          <li>
                              Sep ’12: (*) The 19<sup>th</sup> Workshop for Logic, Language, Information and Computation (WoLLIC), Buenos Aires, Argentina
