--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
                 &nbsp[<a data-bs-toggle="collapse" href="#heredit-fin" aria-expanded="false" aria-controls="collapseExample">abstract</a>]
                 [<a href="Talks/heredit-fin-talk.pdf">slides</a>]
                 [<a data-bs-toggle="collapse" href="#heredit-fin-talk" aria-expanded="false" aria-controls="collapseExample">talk venues</a>]<br>
-                <p style="margin-bottom:0.2cm;">This is an alternate (and chronologically first) proof of the central result of <a href="https://drops.dagstuhl.de/opus/volltexte/2021/13452/">this paper</a>. University of Cambridge, February 2019.</p> <br>
+                <p style="margin-bottom:0.2cm;">This is an alternate (and chronologically first) proof of the central result of <a href="https://drops.dagstuhl.de/opus/volltexte/2021/13452/">this paper</a>. University of Cambridge, February 2019.</p>
                 <div class="collapse" id="heredit-fin">
                     <div class="card card-body">
                         The Los-Tarski theorem is a result from classical model theory that states that over arbitrary (finite or infinite) structures, a first order (FO) sentence is hereditary if, and only if, it is equivalent to a universal sentence. This theorem however fails when restricted to finite structures. Tait (1959) and independently Gurevich and Shelah (1984) showed that in the finite (i.e. over the class of all finite structures), there is an FO sentence that is hereditary but that is not equivalent to any universal sentence.<br><br>
