--- a/index.html
+++ b/index.html
@@ -587,11 +587,8 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
 
  <hr />
     <br />
-    <br />
-    Copyright 2021
-    <br />
-    <br />
-    <!-- Optional JavaScript; choose one of the two! -->
+            <p align="right">Copyright 2021, Abhisekh Sankaran</p>
+     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
