--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <a class="nav-item nav-link" href="#publications">Publications</a>
             <a class="nav-item nav-link" href="#other-articles">Other articles</a>
             <a class="nav-item nav-link" href="#teaching">Teaching</a>
-            <a class="nav-item nav-link" href="#some-talks-notes">Some talks and notes</a>
+            <a class="nav-item nav-link" href="#some-talks-notes">Other talks and reports</a>
           </div>
         </div>
       </div>
@@ -469,7 +469,7 @@ Foundations of Computer Science (MFCS), Budapest, Hungary
         </div>
         <hr />
         <div class="div-notes" id="some-talks-notes">
-         <h3> Some talks and notes </h3>
+         <h3> Other talks and reports </h3>
             <p>
             <ul>
             <li>
